--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>SpringExample</name>
   <url>http://maven.apache.org</url>
-  
+  <properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
   <dependencies>
     <!-- Spring framework -->
 	<dependency>
